force-app/main/default/objects/leaseworks__Deal_Approval_Revision__c/leaseworks__Deal_Approval_Revision__c.object-meta.xml
<CustomObject>
    <label>Deal Approval Revision</label>
    <nameField>
        <label>Deal Approval Revision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Approval Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>