force-app/main/default/objects/leaseworks__Deal_Approval_Revision__c/fields/leaseworks__Commercial_Terms_Revision__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Commercial_Terms_Revision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Commercial Terms</label>
    <referenceTo>leaseworks__Deal_Terms_Revision__c</referenceTo>
    <relationshipLabel>Deal Approvals</relationshipLabel>
    <relationshipName>Deal_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>