force-app/main/default/objects/leaseworks__Deal_Approval_Revision__c/fields/leaseworks__Country__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Country__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>