force-app/main/default/objects/leaseworks__Deal_Approval_Revision__c/fields/leaseworks__Marketing_Activity_Revision__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Activity_Revision__c</fullName>
    <label>Deal Revision</label>
    <referenceTo>leaseworks__Marketing_Activity_Revision__c</referenceTo>
    <relationshipLabel>Deal Approvals</relationshipLabel>
    <relationshipName>Deal_Approval_Revisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>