force-app/main/default/objects/leaseworks__Deal_Approval_Revision__c/fields/leaseworks__Prospect1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prospect1__c</fullName>
    <label>Prospect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>