force-app/main/default/objects/leaseworks__Deal_Approval_Revision__c/fields/leaseworks__Stage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Stage__c</fullName>
    <description>stages in that BidAsk/RevComm process.</description>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>